CVS HEAD:
 * user interface improvements:
   * made the right Command key on Mac OS X work like the left one
   * made the 100 gold minimum for next scenario explicitly mentioned (#12987)
   * made menu widgets sortable
   * added %-to-kill to Damage Calculations
   * added display of unit defense over the terrain when choosing move
   * added visual cue for movement in specific terrain when choosing move
   * added 'Advanced' preferences: 'binary save files', 'show combat'
   * made network dialogs show progress of data transfers again
   * sped up help
   * fixed female units not appearing in help (broken since 0.9.0)
   * reduced required width of weapon area in help
   * fixed items appearing in traits description (#12603)
   * preserve trait ordering to distinguish quick,resilient and resilient,quick
   * improved layout of objectives dialog
   * made the text of disabled buttons grayed out
   * made room for observers in DFool theme
   * added clock to DFool theme
   * tweaked multiplayer lobby
 * campaign improvements:
   * Eastern Invasion:
     * fixed Dacyn not being [recall]-ed in Unexpected Appearance (#10619)
     * fixed killing enemies in wrong order not resulting in a victory in
       Northern Outpost (#12922)
     * fixed several bugs with Captured
     * new map and scenario modification for Drowned Plains
   * Heir to the Throne:
     * fixed thieves not appearing in Siege of Elensefar (forum thread 5719)
   * Son of the Black Eye:
     * prevented the shamans from being recallable (#11932)
     * killing enemy leader in Siege of Barag Gor is no longer a win
     * increased turn limit in End of Peace 24 -> 26 due to Lieutenant upgrade
 * unit balancing and modifications: 
   * reduced Dwarvish Fighter cost by 1
   * changed Lieutenant attack from 6-3 to 9-3
   * changed Soulless attack from 7-2 to 7-3
   * changed Soulless attack from plague to plague(Walking Corpse)
   * changed Skeletal Dragon resistances (only used in Eastern Invasion: