@@ -28,7 +28,8 @@ class display;
 namespace hotkey {
 
 enum HOTKEY_COMMAND {
-	HOTKEY_CYCLE_UNITS, HOTKEY_END_UNIT_TURN, HOTKEY_LEADER,
+	HOTKEY_CYCLE_UNITS,HOTKEY_CYCLE_BACK_UNITS, HOTKEY_UNIT_HOLD_POSITION, 
+	HOTKEY_END_UNIT_TURN, HOTKEY_LEADER,
 	HOTKEY_UNDO, HOTKEY_REDO,
 	HOTKEY_ZOOM_IN, HOTKEY_ZOOM_OUT, HOTKEY_ZOOM_DEFAULT,
 	HOTKEY_FULLSCREEN, HOTKEY_SCREENSHOT, HOTKEY_ACCELERATED,
@@ -129,8 +130,10 @@ protected:
 public:
 
 	virtual void cycle_units() {}
+	virtual void cycle_back_units() {}
 	virtual void end_turn() {}
 	virtual void goto_leader() {}
+	virtual void unit_hold_position() {}
 	virtual void end_unit_turn() {}
 	virtual void undo() {}
 	virtual void redo() {}
